# BACON

./: BACon.cc  CMakeLists.txt  Makefile  RooT  anaTrk.C  cmake_install.cmake
External_data/: Ar39Theory.root  Iron_Reflectivity.root  Reflectivity_Cu.root  Reflectivity_Ge.root  TPB_Spec_Lehnert_thesis.root  tpbGhemann.root
LRoot/: LTEvent.cxx  LTEvent.hxx  LTEvent_Dict.cxx  LTEvent_Dict_rdict.pcm  LTEvent_LinkDef.h  LTHitSegment.cxx  LTHitSegment.hxx  LTHitSegment_Dict.cxx  LTHitSegment_Dict_rdict.pcm  LTHitSegment_LinkDef.h  LTPVertex.cxx  LTPVertex.hxx  LTPVertex_Dict.cxx  LTPVertex_Dict_rdict.pcm  LTPVertex_LinkDef.h  LTParticle.cxx  LTParticle.hxx  LTParticle_Dict.cxx  LTParticle_Dict_rdict.pcm  LTParticle_LinkDef.h  LTTrack.cxx  LTTrack.hxx  LTTrack_Dict.cxx  LTTrack_Dict_rdict.pcm  LTTrack_LinkDef.h  LTTraject.cxx  LTTraject.hxx  LTTraject_Dict.cxx  LTTraject_Dict_rdict.pcm  LTTraject_LinkDef.h  Makefile
Macro/: alpha1.mac  alpha100.mac  alpha1000.mac  alphaMev.mac  decay1.mac~  decay10.mac  decay10.mac~  decay100.mac  decay10k.mac  decay10k.mac~  decay200.mac  decay200.mac~  decay5.mac  run-vis.mac  run1.mac~  run10.mac  run100.mac  run100.mac~  run1000.mac  run1000.mac~  run10k.mac  run500.mac  vis-old.mac  vis.mac
include/: DetectorConstruction.hh  EventAction.hh  GermaniumSD.hh  LegendAnalysis.hh  LegendParticleSource.hh  LegendTrajectory.hh  MGUIcmdStepLimit.hh  MinEkineCuts.hh  OpWLS.hh  PMTSD.hh  PhysicsList.hh  PrimaryGeneratorAction.hh  PrimaryGeneratorActionMessenger.hh  RunAction.hh  SteppingAction.hh  TrackingAction.hh  UserEventInformation.hh  UserTrackInformation.hh
src/: DetectorConstruction.cc  EventAction.cc  GermaniumSD.cc  LegendAnalysis.cc  LegendDetectorMaterials.icc  LegendParticleSource.cc  LegendTrajectory.cc  MGGeneratorRDMNucleus.cc  MGGeneratorRDMPrimary.cc  MGGeneratorRDMRadioactiveDecayGun.cc  MGProcessesList.cc  MGProcessesSpecialCuts.cc  MaxTimeCuts.cc  MinEkineCuts.cc  OpWLS.cc  PMTSD.cc  PhysicsList.cc  PrimaryGeneratorAction.cc  PrimaryGeneratorActionMessenger.cc  RunAction.cc  SpecialCuts.cc  SteppingAction.cc  TrackingAction.cc  UserEventInformation.cc  UserTrackInformation.cc
